# claude-powerline-rust

./: .gitignore  Cargo.toml  LICENSE  MACOS_BUILD.md  PERFORMANCE_IMPROVEMENTS.md  README.md  build-all.sh  cost_analysis_export.json  prompt.txt  token_analysis_export.json
.github/workflows/: ci.yml  release.yml
benches/: performance_bench.rs
releases/: claude-powerline-linux-x86_64
src/: lib.rs  main.rs
src/config/: defaults.rs  loader.rs  mod.rs
src/segments/: block.rs  context.rs  git.rs  metrics.rs  mod.rs  model.rs  session.rs  today.rs
src/themes/: mod.rs
src/utils/: cache.rs  claude.rs  data_aggregation.rs  logger.rs  mod.rs  pricing.rs
tests/: analyze_cost_calculation.py  debug_token_calculation.py  detailed_token_analysis.py  end_to_end_tests.rs  integration_tests.rs  segment_tests.rs  transcript_parser_tests.rs
